// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for basic member 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListEmptyComponent={[Function]}
    ListHeaderComponent={[Function]}
    contentContainerStyle={
      Array [
        undefined,
        Object {
          "backgroundColor": "#ECEEF2",
        },
        Object {},
      ]
    }
    contentInset={
      Object {
        "bottom": 10,
      }
    }
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-10-06T14:13:21Z",
              "id": "1",
              "isPast": false,
              "organization_id": "123",
              "title": "Read \\"There and Back Again\\"",
            },
          ],
          "title": "",
        },
        Object {
          "data": Array [
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-07-06T14:13:21Z",
              "id": "2",
              "isPast": true,
              "organization_id": "123",
              "title": "Past Challenge",
            },
          ],
          "title": "Past Challenges",
        },
      ]
    }
    disableVirtualization={false}
    extraData={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={0.0001}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-10-06T14:13:21Z",
              "id": "1",
              "isPast": false,
              "organization_id": "123",
              "title": "Read \\"There and Back Again\\"",
            },
          ],
          "title": "",
        },
        Object {
          "data": Array [
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-07-06T14:13:21Z",
              "id": "2",
              "isPast": true,
              "organization_id": "123",
              "title": "Past Challenge",
            },
          ],
          "title": "Past Challenges",
        },
      ]
    }
    stickyHeaderIndices={
      Array [
        1,
        4,
      ]
    }
    stickySectionHeadersEnabled={true}
    testID="ChallengeFeed"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "backgroundColor": "#ECEEF2",
              "marginVertical": 8,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 12,
                  "textAlign": "center",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "stretch",
                "flexDirection": "column",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="ChallengeItemSelectButton"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {
                    "flex": 1,
                  },
                  null,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "padding": 20,
                    },
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "flex": 5,
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Object {
                          "color": "#007398",
                          "fontSize": 16,
                          "marginBottom": 3,
                        },
                      ]
                    }
                  >
                    Read "There and Back Again"
                  </Text>
                  <View
                    style={
                      Array [
                        Object {
                          "paddingTop": 8,
                        },
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Object {
                              "color": "#A0A2A6",
                              "fontSize": 12,
                              "lineHeight": 16,
                            },
                          ]
                        }
                      >
                        Days Left
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Object {
                              "color": "#505256",
                              "fontFamily": "SourceSansPro-ExtraLight",
                              "fontSize": 24,
                              "lineHeight": 30,
                            },
                          ]
                        }
                      >
                        35
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Object {
                              "color": "#A0A2A6",
                              "fontSize": 12,
                              "lineHeight": 16,
                            },
                          ]
                        }
                      >
                        Joined
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Array [
                              Object {
                                "color": "#505256",
                                "fontFamily": "SourceSansPro-ExtraLight",
                                "fontSize": 24,
                                "lineHeight": 30,
                              },
                              null,
                            ],
                          ]
                        }
                        testID="joinedCount"
                      >
                        5
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Object {
                              "color": "#A0A2A6",
                              "fontSize": 12,
                              "lineHeight": 16,
                            },
                          ]
                        }
                      >
                        Completed
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Array [
                              Object {
                                "color": "#505256",
                                "fontFamily": "SourceSansPro-ExtraLight",
                                "fontSize": 24,
                                "lineHeight": 30,
                              },
                              null,
                            ],
                          ]
                        }
                        testID="completedCount"
                      >
                        3
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "alignItems": "flex-end",
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="ChallengeItemActionButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#007398",
                    "height": 60,
                    "justifyContent": "center",
                  },
                  null,
                  Object {
                    "backgroundColor": "#3CC8E6",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "height": undefined,
                    "paddingVertical": 8,
                  },
                  null,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgba(0,0,0,0)",
                        "color": "#ffffff",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 1.5,
                        "textAlign": "center",
                      },
                      Object {
                        "fontSize": 15,
                      },
                    ],
                  ]
                }
              >
                JOIN
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "backgroundColor": "#ECEEF2",
              "marginVertical": 8,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#B4B6BA",
                  "fontSize": 12,
                  "textAlign": "center",
                },
              ]
            }
          >
            Past Challenges
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "stretch",
                "flexDirection": "column",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="ChallengeItemSelectButton"
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  null,
                  Object {
                    "flex": 1,
                  },
                  null,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "padding": 20,
                    },
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "flex": 5,
                        "flexDirection": "column",
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Object {
                          "color": "#007398",
                          "fontSize": 16,
                          "marginBottom": 3,
                        },
                      ]
                    }
                  >
                    Past Challenge
                  </Text>
                  <View
                    style={
                      Array [
                        Object {
                          "paddingTop": 8,
                        },
                        Object {
                          "flexDirection": "row",
                          "justifyContent": "space-between",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Object {
                              "color": "#A0A2A6",
                              "fontSize": 12,
                              "lineHeight": 16,
                            },
                          ]
                        }
                      >
                        Days
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Object {
                              "color": "#505256",
                              "fontFamily": "SourceSansPro-ExtraLight",
                              "fontSize": 24,
                              "lineHeight": 30,
                            },
                          ]
                        }
                      >
                        -56
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Object {
                              "color": "#A0A2A6",
                              "fontSize": 12,
                              "lineHeight": 16,
                            },
                          ]
                        }
                      >
                        Joined
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Array [
                              Object {
                                "color": "#505256",
                                "fontFamily": "SourceSansPro-ExtraLight",
                                "fontSize": 24,
                                "lineHeight": 30,
                              },
                              null,
                            ],
                          ]
                        }
                        testID="joinedCount"
                      >
                        5
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "flex": 1,
                            "flexDirection": "column",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Object {
                              "color": "#A0A2A6",
                              "fontSize": 12,
                              "lineHeight": 16,
                            },
                          ]
                        }
                      >
                        Completed
                      </Text>
                      <Text
                        onPress={[Function]}
                        style={
                          Array [
                            Object {
                              "color": "#505256",
                            },
                            Object {
                              "fontFamily": "SourceSansPro-Regular",
                            },
                            Array [
                              Object {
                                "color": "#505256",
                                "fontFamily": "SourceSansPro-ExtraLight",
                                "fontSize": 24,
                                "lineHeight": 30,
                              },
                              null,
                            ],
                          ]
                        }
                        testID="completedCount"
                      >
                        3
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "alignItems": "flex-end",
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`should render empty correctly 1`] = `
Array [
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ListEmptyComponent={[Function]}
      ListHeaderComponent={[Function]}
      contentContainerStyle={
        Array [
          undefined,
          Object {
            "backgroundColor": "#ECEEF2",
          },
          Object {},
        ]
      }
      contentInset={
        Object {
          "bottom": 90,
        }
      }
      data={Array []}
      disableVirtualization={false}
      extraData={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReached={[Function]}
      onEndReachedThreshold={0.2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onRefresh={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshControl={
        <RefreshControlMock
          onRefresh={[Function]}
          refreshing={false}
        />
      }
      refreshing={false}
      renderItem={[Function]}
      renderSectionHeader={[Function]}
      scrollEventThrottle={0.0001}
      sections={Array []}
      stickyHeaderIndices={Array []}
      stickySectionHeadersEnabled={true}
      testID="ChallengeFeed"
      updateCellsBatchingPeriod={50}
      windowSize={21}
    >
      <RCTRefreshControl />
      <View>
        <View
          onLayout={[Function]}
        />
        <View
          style={
            Array [
              Array [
                Object {
                  "backgroundColor": "#ffffff",
                },
                Object {
                  "backgroundColor": "#ECEEF2",
                  "marginTop": 5,
                },
              ],
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../assets/images/challengeTarget.png",
              }
            }
            style={
              Object {
                "flexShrink": 1,
              }
            }
          />
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#007398",
                  "fontFamily": "SourceSansPro-Regular",
                  "fontSize": 24,
                  "fontWeight": "300",
                  "paddingTop": 10,
                },
              ]
            }
          >
            Our Challenges
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 16,
                  "paddingHorizontal": 80,
                  "paddingVertical": 10,
                  "textAlign": "center",
                },
              ]
            }
          >
            Create a community challenge everyone can join.
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>,
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="bottomButton"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Array [
              Object {
                "alignItems": "center",
                "height": 48,
                "width": 650,
              },
              undefined,
            ],
            Object {
              "borderRadius": 50,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Array [
                  undefined,
                ],
              ],
            ]
          }
        >
          CREATE CHALLENGE
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>,
]
`;
